--- a/book/1.0/hello_world/Cargo.toml
+++ b/book/1.0/hello_world/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 
-name = "basics"
+name = "hello_world"
 version = "0.0.1"
 authors = [ "Jack <jackhoy05@gmail.com>" ]
 
 [[bin]]
 
-name = "basics"
+name = "hello_world"
